# ruoyi-vue-pro-master/ruoyi-vue-pro-master/ruoyi-vue-pro-master/yudao-module-tk/src/main/java/cn/iocoder/yudao/module/tk/controller/open/tiktok/TkOpenTiktokPublishController.java
@@ -39,6 +39,11 @@ public class TkOpenTiktokPublishController {
         return TkOpenApiResponse.success(publishService.getDetails(taskId));
     }
 
+    @GetMapping("/tasks/{taskId}/metrics")
+    public TkOpenApiResponse<TkOpenTiktokPublishVO.MetricsResp> metrics(@PathVariable String taskId) {
+        return TkOpenApiResponse.success(publishService.getMetrics(taskId));
+    }
+
     @PostMapping("/details/{detailId}/retry")
     public TkOpenApiResponse<Boolean> retry(@PathVariable String detailId) {
         publishService.retry(detailId);
